style.css
/*

    COLORS

    Pink   : #ffdddd
    Purple : #ddddff
    Green  : #ddffdd
    Blue   : #ddffff
    Yellow : #ffffdd

    BREAKPOINTS

    600px
    1100px

*/

body {
  font-family: Palatino, Times, serif;
  background-color: #ddffdd;
  margin: 20px;
  font-size: 14px;
  line-height: 1.6;
}

ul {
  padding-left: 20px;
  margin-top: 0;
}

h1, h2, h3 {
  color: #009999;
}

h2, h3 {
  margin-bottom: 0;
}

a {
  font-weight: bold;
  color: red;
  text-decoration: none;
}

a:hover {
  color: blue;
}

header {
  padding-bottom: 15px;
  margin-bottom: 20px;
  border-bottom: 2px solid #ddddff;

}

#logo {
  flex: 1;

}

#site_container {
  padding: 20px;
  max-width: 1100px;
  margin: 0 auto;
  background: white;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

#main_nav {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: flex-end;

}

#main_nav a {
  display: block;
  padding: 10px 2%;
  background: #ffdddd;
  margin: 5px;
  margin-bottom: 5px;
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 50px;
  padding-right: 50px;
}

#main_nav a:hover {
  background: #ddddff;
}

#main_content {
  background-color: #DEFFFF;
  padding: 10px;
  display: flex;

}
#sidebar_content {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

#sidebar_content div {
  padding: 30px;
  margin-top: 15px;
  margin-bottom: 15px;
  background-color: #FFFEDC;
  flex: 1;
}

#site_footer {
  background-color: #FEDCAA;
  padding: 10px;
  text-align: center;
}

@media screen and (min-width: 300px) {
  #main_nav {
    flex-wrap: nowrap;
    flex-direction: column;
    align-items: stretch;
  }
  #main_content {
    display: block;
  }
  #logo {
    text-align: center;
  }
  header {
    display: flex;
    flex-direction: column;
  }
}

@media screen and (min-width: 600px) {
  #main_nav {
    flex-direction: row;
    flex: 1;
    align-items: center;
  }
  #main_nav a {
    flex: 1;
  }
  #main_content {
    display: block;
  }
  #main_content>div {}
  header {
    display: flex;
    flex-wrap: wrap;
    flex: 1;
  }
  #logo {
    text-align: center;
  }
}

@media screen and (min-width: 1000px) {
  #main_nav {
    flex: 1;
    flex-wrap: nowrap;
    align-items: center;
    flex-direction: row;
  }
  #logo {
    text-align: left;
  }
  #main_content {
    display: flex;
  }
  #main_content div {
    flex: 1;
  }
  header {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    flex: 1;
  }
}

